Closed Bug 970364 Opened 10 years ago Closed 10 years ago

Fix conversions between enum classes and ints in gfx/2d/.

Categories

(Core :: Graphics, defect)

x86_64
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla30

People

(Reporter: jacek, Assigned: jacek)

Details

Attachments

(1 file)

Attached patch fixSplinter Review
GCC (mingw) complains about some implicit casts from enum classes to integers. The fix is as simple as making casts explicit.
Attachment #8373391 - Flags: review?(bas)
Attachment #8373391 - Flags: review?(bas) → review+
https://hg.mozilla.org/mozilla-central/rev/55087097f0f7
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla30
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: