Bug 970364 - Fix conversions between enum classes and ints in gfx/2d/. r=bas.schouten